--- a/frontend/package.json
+++ b/frontend/package.json
@@ -87,6 +87,7 @@
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
+        "antd": "^4.4.2",
         "axios": "^0.19.2",
         "cross-env": "^6.0.3",
         "react": "^16.12.0",
