--- a/frontend/package.json
+++ b/frontend/package.json
@@ -87,9 +87,11 @@
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
-        "antd": "^4.4.2",
+        "@ant-design/icons": "^4.2.1",
+        "antd": "^4.4.3",
         "axios": "^0.19.2",
         "cross-env": "^6.0.3",
+        "history": "^5.0.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-redux": "^7.1.3",
