--- a/frontend/package.json
+++ b/frontend/package.json
@@ -94,6 +94,7 @@
         "history": "^5.0.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-lines-ellipsis": "^0.14.1",
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.4",
