--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,6 @@
     "babel-eslint": "^10.0.1",
     "css-loader": "^3.3.2",
     "cypress": "^3.8.0",
-    "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-loader": "^2.1.1",
@@ -44,6 +43,7 @@
     "history": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-highlight-words": "^0.16.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
