--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "axios": "^0.19.2",
     "cross-env": "^6.0.3",
     "history": "^5.0.0",
+    "moment": "^2.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-highlight-words": "^0.16.0",
