--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^16.12.0",
     "react-highlight-words": "^0.16.0",
     "react-lines-ellipsis": "^0.14.1",
+    "react-multi-crops": "0.0.10",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
