--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "cross-env": "^6.0.3",
     "history": "^5.0.0",
     "moment": "^2.27.0",
+    "querystring": "^0.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-highlight-words": "^0.16.0",
