--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -13,6 +13,8 @@
     "aws-sdk": "^2.788.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "uuid": "^8.3.1"
   },
