--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ certifi==2020.6.20
 click==7.1.2
 elasticsearch==7.8.0
 Flask==1.1.2
+flask_cors==3.0.9
 importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
