--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "material-dashboard-react": "^1.9.0"
   },
   "devDependencies": {
     "husky": "^4.2.5"
